<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vendedores</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_listado_clientes">ListadoClientes</string>
    <string name="title_activity_login">Registro de usuario</string>
    <string name="text_btn_ingresar">Ingresar</string>
    <string name="title_activity_detalle_cliente">DetalleCliente</string>
    <string name="title_activity_factura">Factura</string>
    <string name="autocomplete_producto">Producto</string>
    <string name="btn_text_registrar_venta">Transacciones</string>
    <string name="btn_text_repetir_venta">Repetir última venta</string>
    <string name="title_activity_ventas_historico">VentasHistorico</string>
    <string name="text_btn_historico">Ver datos historicos</string>
    <string name="text_btn_generar_factura">Generar Factura</string>
    <string name="text_btn_add">Mas </string>
    <string name="text_btn_rem">Menos </string>
    <string name="text_dialog_si">Si </string>
    <string name="text_dialog_no">No </string>
    <string name="text_dialog_text">Algo </string>
    <string name="todo">TODO</string>
    <string name="LoginConectado">¡Conectado!</string>
    <string name="buscar">Buscar</string>
    <string name="monto_tag">Monto: </string>
    <string name="saldo_tag">Saldo: </string>
    <string name="title_activity_nota">NotaActivity</string>
    <string name="title_activity_gcm_activity">GCMActivity</string>
     <string name="text_btn_clientes_sin_visitar">Ver clientes sin visitar</string>
	<string name="text_porcentajes">Porcentajes de compras</string>
	<string name="eleccion_factura_activity">Eleccion factura</string>
	<string name="title_activity_visita">Visita</string>
	
	
	<string name="text_btn_factura_contado">Facturar Contado</string>
	<string name="text_btn_factura_credito">Facturar Credito</string>
	<string name="text_btn_nota_contado">Nota dev Contado</string>
	<string name="text_btn_nota_credito">Nota dev Credito</string>
	<string name="text_btn_visita">Visita</string>
	<string name="titulo_eleccion_facura">"Seleccione una operación"</string>
	<string name="button">btn_fac_contado</string>
	<string name="borrar_fila">Borrar fila</string>
	<string name="agregar_descuento">Agregar descuento</string>
	<string name="modo_de_pago">Modo de pago</string>
	<string name="credito">Credito</string>
	<string name="contado">Contado</string>
	<string name="porcentaje">%</string>
	<string name="ver_mapa">Ver Mapa</string>
	<string name="mas_info_venta">Ver mas datos de la venta</string>
	<string name="datos_ultima_venta">Datos Venta</string>
	<string name="btn_marcar_leido">Marcar como leídos</string>
	<string name="notificaciones">Notificaciones</string>
	<string name="carga_de_productos">carga de productos 0%</string>
	
	<string name="text_btn_enviar_factura">Enviar</string>
	<string name="text_ver_todos_los_clientes">Ver todos los Clientes</string>
	
	
</resources>
