<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/btn_visita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_style"
        android:onClick="to_factura_activity"
        android:text="@string/text_btn_visita"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="10sp" 
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_factura_contado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_nota_contado"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_style"
        android:onClick="to_historico_activity"
        android:text="@string/text_btn_factura_contado"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" 
        android:layout_marginTop="10sp"
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_factura_credito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_factura_contado"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_style"
        android:onClick="to_factura_activity_con_venta"
        android:text="@string/text_btn_factura_credito"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" 
        android:layout_marginTop="10sp"
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_nota_credito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_visita"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_style"
        android:onClick="to_factura_activity"
        android:text="@string/text_btn_nota_credito"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginTop="10sp" 
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_nota_contado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_nota_credito"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_style"
        android:onClick="to_factura_activity"
        android:text="@string/text_btn_nota_contado"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" 
        android:layout_marginTop="10sp"
        android:enabled="false"/>


     <TextView

        android:id="@+id/titulo_eleccion_facura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_factura_credito"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/titulo_eleccion_facura" 
        android:textSize="20sp">

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/carga_de_productos"
        android:textColor="@color/azul"
        android:textSize="18sp"
        android:visibility="visible" />

</RelativeLayout>