<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/dnb_land_ocean_ice" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="90dp"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_marginBottom="39dp"
            android:layout_marginTop="150dp"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="250dp"
            android:background="#6699FF"
            android:onClick="post"
            android:text="@string/text_btn_ingresar"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
           
            android:text="@string/title_activity_login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" 
            android:textSize="30sp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" >

        <SeekBar
            android:id="@+id/LoginSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/LoginConectado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginConectado"
            android:inputType="none"
            android:textColor="@android:color/white" 
			android:visibility="invisible" >
            <requestFocus />
        </EditText>

        <ProgressBar
            android:id="@+id/LoginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </FrameLayout>

</RelativeLayout>
